Fix text not wrapping in posts

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -2,6 +2,7 @@ body {
   padding: 0;
   margin: 0;
   font-size: 15px;
+  word-wrap: break-word;
 }
 
 img {
